<resources>
    <string name="app_name">Services App</string>
    <string name="download_activity_title">PDF Download Activity</string>
    <string name="download_lbl_pdf1">PDF1 File Location:</string>
    <string name="download_lbl_pdf2">PDF2 File Location:</string>
    <string name="download_lbl_pdf3">PDF3 File Location:</string>
    <string name="download_lbl_pdf4">PDF4 File Location:</string>
    <string name="download_lbl_pdf5">PDF5 File Location:</string>
    <string name="download_btn_download">Started Download</string>
    <string name="download_btn_bound_download">Bound Download</string>
    <string name="download_btn_cancel">Close</string>

</resources>
